--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icewm (1.3.8+mod+20161220-1) unstable; urgency=low
+
+  * New upstream snapshot
+
+ -- Eduard Bloch <blade@debian.org>  Tue, 20 Dec 2016 20:28:11 +0100
+
 icewm (1.3.8+mod+20160906-1) unstable; urgency=medium
 
   * New upstream snapshot
