--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icewm (1.4.1+mod+20170728-1) experimental; urgency=low
+
+  * New (unofficial fork) upstream snapshot
+
+ -- Eduard Bloch <blade@debian.org>  Fri, 28 Jul 2017 16:13:19 +0200
+
 icewm (1.3.8+mod+20161220-1) unstable; urgency=low
 
   * New upstream snapshot
