--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+commit 8f1eed9cd44455a198c2f2d31a3927823f2c81ef
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Fri Jul 28 00:33:50 2017 +0200
+
+    Prepare for 1.4.1 release.
+
+ ChangeLog      | 118 +++++++++++++++++++++++++++++++++++++++++++++++++++++
+ NEWS           |  20 ++++++++-
+ README.md      |   6 +--
+ README.md.in   |   2 +-
+ VERSION        |   2 +-
+ configure.ac   |   6 +--
+ doc/icewm.adoc |   2 +-
+ 7 files changed, 146 insertions(+), 10 deletions(-)
 # created with git log --stat=76 -M -C -300|fmt -sct -w80
 
 commit 9b13b2837831888a369c34b9c28939b99c1cd175
